src/assets/less/local.less
/* ... */
/* Dark Mode */
@media only screen and (min-width: 0rem) {
    body.dark-mode {
        #hero-1299 {
            background-color: rgba(0, 0, 0, 0.8);

            .cs-title {
                color: var(--bodyTextColorWhite);
            }

            .cs-text {
                color: var(--bodyTextColorWhite);
                opacity: 0.9;
            }

            .cs-card-group {
                background-color: var(--dark);
            }

            .cs-item {
                border-color: rgba(255, 255, 255, 0.1);
                &:hover {
                    background-color: rgba(0, 0, 0, 0.6);
                    border-color: rgba(0, 0, 0, 0.6);
                }
            }

            .cs-h3,
            .cs-item-text {
                color: var(--bodyTextColorWhite);
            }

            .cs-item-text {
                opacity: 0.8;
            }

            .cs-background {
                opacity: 0.15;

                &:before {
                    opacity: 0.5;
                    background: #000;
                }
            }
        }
    }
}

/* Dark Mode Tablet and Up Only */
@media only screen and (min-width: 48rem) {
    body.dark-mode {
        #hero-1299 {
            .cs-background {
                opacity: 0.15;

                &:before {
                    opacity: 0.8;
                    background: linear-gradient(
                        89deg,
                        rgba(0, 0, 0, 1) 30%,
                        rgba(0, 0, 0, 0) 100%
                    );
                }
            }
        }
    }
}
                                

/*-- -------------------------- -->
<---       Side By Side         -->
<--- -------------------------- -*/

/* Mobile - 360px */
@media only screen and (min-width: 0rem) {
    #sbs-523 {
        padding: var(--sectionPadding);

        @keyframes floatAnimation {
            0% {
                transform: translateY(0);
            }
            50% {
                transform: translateY(-0.6em);
            }
            100% {
                transform: translateY(0);
            }
        }

        @keyframes floatAnimation2 {
            0% {
                transform: translateY(0);
            }
            50% {
                transform: translateY(-1em);
            }
            100% {
                transform: translateY(0);
            }
        }

        .cs-container {
            width: 100%;
            /* changes to 1280px at desktop */
            max-width: (550/16rem);
            margin: auto;
            display: flex;
            flex-direction: column;
            align-items: center;
            /* 48px - 64px */
            gap: clamp(3rem, 6vw, 4rem);
        }

        .cs-content {
            /* set text align to left if content needs to be left aligned */
            text-align: left;
            width: 100%;
            display: flex;
            flex-direction: column;
            /* centers content horizontally, set to flex-start to left align */
            align-items: flex-start;
        }

        .cs-color {
            color: var(--secondary);
        }

        .cs-text {
            margin-bottom: (16/16rem);
            &:last-of-type {
                margin-bottom: (32/16rem);
            }
        }

        .cs-image-group {
            /* this is how we can scale entire groups using ems.  Font size is tied to the view width, so as the screen gets bigger, so does the font size, and this scales up and down the elements with em values.  Then it stops growing once the font size reaches the defined value of 1em (16px which is default on the html element). Font size changes at desktop */
            font-size: ~"min(2.3vw, .875em)";
            /* all values are done in ems, not rems, so we can scale the group with a font size min/max equation */
            width: (630/16em);
            height: (817/16em);
            /* pushes it to the top in the first position */
            order: -1;
            position: relative;

            &:before {
                content: "";
                width: (186/16em);
                height: (161/16em);
                background: var(--primary);
                opacity: 1;
                display: block;
                position: absolute;
                top: (0/16em);
                left: (0/16em);
                animation-name: floatAnimation;
                animation-duration: 6s;
                animation-timing-function: ease-in-out;
                animation-iteration-count: infinite;
                animation-fill-mode: forwards;
            }
        }

        .cs-picture {
            display: block;
            position: absolute;

            img {
                width: 100%;
                height: 100%;
                /* makes it act like a background image */
                object-fit: cover;
                position: absolute;
                top: 0;
                left: 0;
            }
        }

        .cs-picture-large {
            width: (476/16em);
            height: (677/16em);
            top: (70/16em);
            left: (62/16em);
        }

        .cs-picture-small {
            width: (260/16em);
            height: (225/16em);
            background-color: #fff;
            border: (10/16em) solid #fff;
            right: 0;
            bottom: 0;
            animation-name: floatAnimation2;
            animation-duration: 20s;
            animation-timing-function: ease-in-out;
            animation-iteration-count: infinite;
            animation-fill-mode: forwards;
        }
    }
}
/* ... */

